--- a/CodeLife.web/Views/Shared/_Layout.cshtml
+++ b/CodeLife.web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                                 Admin
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>                                
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>    
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">Display All Tags</a></li>
                             </ul>
                     </ul>
                 </div>
