--- a/CodeLife.web/Views/Shared/_Layout.cshtml
+++ b/CodeLife.web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>    
                                 <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">Display All Tags</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPosts" asp-action="Add">Add Blog 
+                                    Post</a></li>
                             </ul>
                     </ul>
                 </div>
